--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -1,6 +1,9 @@
 name: PR_unit_tests
 
 on:
+  push:
+    branches:
+      - 'master'
   pull_request:
     branches:
       - 'master'
@@ -10,9 +13,9 @@ jobs:
     name: Run unit tests on PR in master
     runs-on: ubuntu-20.04
 
-  steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with: { java-version: 1.8 }
-    - name: Run unit tests
-      run: ./gradlew test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with: { java-version: 1.8 }
+      - name: Run unit tests
+        run: ./gradlew test
