--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -1,4 +1,4 @@
-name: PR_unit_tests
+name: Flexy Pixel CI
 
 on:
   push:
@@ -17,5 +17,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with: { java-version: 17 }
+      - name: Assemble Debug
+        run: ./gradlew assembleDebug
       - name: Run unit tests
         run: ./gradlew test
+      - name: Run UI tests
+        run: ./gradlew connectedAndroidTest
