--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -22,4 +22,10 @@ jobs:
       - name: Run unit tests
         run: ./gradlew test
       - name: Run UI tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          target: default
+          arch: x86
+          profile: Nexus 6
         run: ./gradlew connectedAndroidTest
