--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -17,15 +17,18 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with: { java-version: 17 }
-      - uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 33
-          target: default
-          arch: x86
-          profile: Nexus 6
+
+        # Simple build
       - name: Assemble Debug
         run: ./gradlew assembleDebug
+
+        # Unit tests
       - name: Run unit tests
         run: ./gradlew test
+
+        # Espresso auto tests
       - name: Run UI tests
-        run: ./gradlew connectedAndroidTest
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          script: ./gradlew connectedCheck
