--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -26,7 +26,14 @@ jobs:
       - name: Run unit tests
         run: ./gradlew test
 
-        # Espresso auto tests
+        # SetUp KVM for autotests
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+        # Run autotests
       - name: Run UI tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
