--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -12,30 +12,61 @@ jobs:
   Unit-test:
     name: Run unit tests on PR in master
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        api-level: [ 33 ]
+        target: [ google_apis ]
+        arch: [ x86_64 ]
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up java 17
+        uses: actions/setup-java@v1
         with: { java-version: 17 }
 
-        # Simple build
+      - name: Gradle cache
+        uses: gradle/gradle-build-action@v2
+
       - name: Assemble Debug
         run: ./gradlew assembleDebug
 
-        # Unit tests
       - name: Run unit tests
         run: ./gradlew test
 
-        # SetUp KVM for autotests
+      - name: AVD cache
+        uses: actions/cache@v3
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-${{ matrix.api-level }}
+
+      - name: Create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: ${{ matrix.arch }}
+          force-avd-creation: false
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
+
       - name: Enable KVM
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
-        # Run autotests
       - name: Run UI tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 33
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: ${{ matrix.arch }}
+          force-avd-creation: false
+          disable-animations: true
           script: ./gradlew connectedCheck
